trunk/Archive2/68/9442f785770c02/output
main.cpp: In function 'int main()':
main.cpp:9:3: error: 'else' without a previous 'if'
   else
   ^
